# CPP-BlackJack

./: .gitignore  .plan.txt.swp  CCPP_Exam  CCPP_Exam.out  CMakeLists.txt  CONTRIBUTING.md  Game_1.txt  Game_2.txt  Game_3.txt  LICENSE  bjCards.cpp  bjCards.h  bjDealer.cpp  bjDealer.h  bjDeck.cpp  bjDeck.h  bjHand.cpp  bjHand.h  bjNonPlayer.cpp  bjPlayer.cpp  bjPlayer.h  bjRuleController.cpp  bjRuleController.h  bjRules.txt  bjplayer.cpp  bjplayer.h  blackJack.cpp  blackJack.h  bugs.txt  build.sh  cards.cpp  cards.h  deck.cpp  deck.h  enums.h  gedanken_read_me.txt  main.cpp  myLittlehelpers.cpp  myLittlehelpers.h  plan.txt  (+13 more)
documents/: readmeger.md
helpers/: AnsiConsole.cpp  AnsiConsole.h  AnsiConsole.hpp  printSteps.cpp  printSteps.hpp  println.hpp
old_code_thats_for_future_project/: bjDealer.cpp  bjDealer.h  bjPlayer_old.cpp  bjPlayer_old.h  blackJack_old.cpp  blackJack_old.h
replaced/: bjNonPlayer.cpp  bjNonPlayer.h  bjplayer.cpp  bjplayer.h  cards.h  deck.h  playCardDeck.cpp  playCardDeck.h  player.h  playerdeck.h
